# wgpu-explorer

./: Cargo.toml  README.md
src/: camera.rs  main.rs  misc.rs  radar.rs  resolution.rs  shader.wgsl  square.rs  texture_image.rs  triangle.rs  triangle.wgsl  vec.rs  vertex.rs  viewport.rs  window_extra.rs  window_main.rs
src/shaders/: extra.wgsl  main.wgsl  radar.wgsl  todo.glsl
